# libnfc-jni

./: .gitignore  CMakeLists.txt  pom.xml
cmake/: FindLibLLCP.cmake  FindLibNFC.cmake
src/main/cpp/: uk_co_polarmoment_bacta_libnfc_jni_jni_SnepServer.cpp  uk_co_polarmoment_bacta_libnfc_jni_jni_Test.cpp
src/main/java/uk/co/polarmoment/bacta/libnfc_jni/: App.java  LibraryLoader.java
src/main/java/uk/co/polarmoment/bacta/libnfc_jni/jni/: SnepServer.java  Test.java
src/test/java/uk/co/polarmoment/bacta/libnfc_jni/: AppTest.java
